tests/miniJava/neg/000086_mutation.MiniJava
class java { public class static void Main ( String [ ] java ) { { } } }
